<resources>
    <!-- General -->
    <string name="app_name">Climo</string>
    <string name="unknown">Unknown</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <!-- New strings -->
    <string name="initial_setup_title">Initial Setup</string>
    <string name="ok">OK</string>
    <string name="unable_to_fetch_location">Unable to fetch location</string>
    <string name="failed_to_fetch_location">Failed to fetch location: %s</string>

    <!-- Settings Screen -->
    <string name="location_set_to">Location set to %s</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="language_changed">Language changed to %s</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="unit_celsius">Celsius</string>
    <string name="unit_kelvin">Kelvin</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_mps">Meters per second</string>
    <string name="unit_mph">Miles per hour</string>
    <string name="location_selection">Location Selection</string>
    <string name="language_selection">Language</string>
    <string name="temp_unit_selection">Temperature</string>
    <string name="wind_speed_selection">Wind Speed</string>
    <string name="notification_selection">Notification</string>

    <!-- Home Screen -->
    <string name="location_permission_denied">Location permission denied. Please allow to display weather data.</string>
    <string name="date_format">dd MMM yyyy, HH:mm</string>
    <string name="time_format">HH:mm</string>
    <string name="pressure">Pressure: %d hPa</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="wind_speed">Wind Speed: %.1f %s</string>
    <string name="clouds">Clouds: %d%%</string>
    <string name="visibility">Visibility: %d m</string>
    <string name="temp_celsius">%.1f°C / %.1f°C</string>
    <string name="temp_fahrenheit">%.1f°F / %.1f°F</string>
    <string name="temp_kelvin">%.1fK / %.1fK</string>
    <string name="temp_celsius_single">%.1f°C</string>
    <string name="temp_fahrenheit_single">%.1f°F</string>
    <string name="temp_kelvin_single">%.1fK</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favorite_locations">Favorites</string>


    <!-- Favorite Locations -->
    <string name="no_favorite_locations">No favorite locations added.</string>
    <string name="location_removed">Removed %s</string>
    <string name="location_added">Added %s to favorites</string>

    <!-- Map Selection -->
    <string name="please_select_location">Please select a location</string>
    <string name="no_cities_found">No cities found for: %s</string>
    <string name="error_fetching_suggestions">Error fetching suggestions: %s</string>
    <string name="error_fetching_city">Error fetching city: %s</string>
    <string name="selected_location">Selected: %s</string>
    <string name="could_not_determine_location">Could not determine location</string>
    <string name="error_fetching_location_name">Error fetching location name: %s</string>

    <string name="no_alerts">No active alerts</string>
    <string name="alert_removed">Alert for %1$s removed</string>
    <string name="city_name">City Name</string>
    <string name="select_from_date_time">Select From Date/Time</string>
    <string name="select_to_date_time">Select To Date/Time</string>
    <string name="notification">Notification</string>
    <string name="heads_up_notification">Heads-Up Notification</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="cancel">Cancel</string>



</resources>