<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.climo.home.view.HomeFragment"
        android:label="@string/nav_home">
        <argument
            android:name="latitude"
            app:argType="float"
            app:nullable="false"
            android:defaultValue="0.0" />
        <argument
            android:name="longitude"
            app:argType="float"
            app:nullable="false"
            android:defaultValue="0.0" />
        <argument
            android:name="locationName"
            app:argType="string"
            app:nullable="false"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/favoriteDetailsFragment"
        android:name="com.example.climo.favorites.view.FavoriteDetailsFragment"
        android:label="@string/nav_favorite_locations">
        <argument
            android:name="latitude"
            app:argType="float"
            app:nullable="false"
            android:defaultValue="0.0" />
        <argument
            android:name="longitude"
            app:argType="float"
            app:nullable="false"
            android:defaultValue="0.0" />
        <argument
            android:name="locationName"
            app:argType="string"
            app:nullable="false"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/favoriteLocationsFragment"
        android:name="com.example.climo.favorites.view.FavoriteLocationsFragment"
        android:label="@string/nav_favorite_locations">
        <action
            android:id="@+id/action_favoriteLocationsFragment_to_favoriteDetailsFragment"
            app:destination="@id/favoriteDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.climo.settings.view.SettingsFragment"
        android:label="@string/nav_settings" />
    <fragment
        android:id="@+id/weatherAlertsFragment"
        android:name="com.example.climo.alerts.view.WeatherAlertsFragment"
        android:label="@string/weather_alerts" />
</navigation>